summative.moria.Moria.scala.error
Erreur de compilation :
Moria:2: error: Boolean does not take parameters
(getCouleurSol() != Color.GREEN) {
                                 ^